[project]
name = "langgraph-ete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.13",
    "langchain[google-genai,openai]>=1.1.0",
    "requests>=2.32.5",
    "wikipedia>=1.4.0",
    "youtube-search>=2.1.2",
]
